--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -18,7 +18,7 @@ a {
 }
 .Hero {
   height: 920px;
-  background: url('../images/Rectangle 6.jpg');
+  background: url('../images/wallpaper5.jpg');
   background-position: center;
   background-size: cover;
   position: relative;
